minor readability improvements + points

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
 <link rel="stylesheet" href="styles.css">
 <h1>The Galactic Community (Unity)</h1>
 
+<section>
+  <table class="">
+    <thead>
+      <th colspan="2">Example Faction Table</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Total faction influence</td>
+        <td>Influence %<br>in the galaxya</td>
+        <td>Number<br>of points</td>
+      </tr>
+      <tr>
+        <td>Name of a member country</td>
+        <td>Influence %<br>in the galaxy</td>
+        <td>Number<br>of points</td>
+        <td>Influence %<br>in the faction</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+<br><br>
+
 <section id="table-section" class="faction-table-section">
   <table class="faction-table">
     <thead>
@@ -51,9 +73,9 @@
 <p>
   To be added: <br>
   - Ability to select countries and see how much influence they add up to<br>
-  - Number of points of each country<br>
-  - History of all influence shifts<br>
+  - History of all influence shifts (the js for that is already there I just need to put it in the document)<br>
   - maybe not making this page painful to look at 😵
+  - Seriously I promise I will make it look better
 </p>
 
 </html>
