--- a/index.html
+++ b/index.html
@@ -31,43 +31,37 @@
 <section id="table-section" class="faction-table-section">
   <table class="faction-table">
     <thead>
-      <th colspan="2">Space Weavers</th>
     </thead>
     <tbody>
-      <tr>
-        <td>Total faction influence</td>
-        <td>XX%</td>
-      </tr>
-      <tr>
-        <td>Nation with really really long name</td>
-        <td>XX%</td>
-      </tr>
-      <tr>
-        <td>Another country</td>
-        <td>XX%</td>
-      </tr>
     </tbody>
   </table>
+</section>
 
-  <table class="faction-table">
-    <thead>
-      <th colspan="2"> Scientific Bond</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Total faction influence</td>
-        <td>XX%</td>
-      </tr>
-      <tr>
-        <td>Nation</td>
-        <td>XX%</td>
-      </tr>
-      <tr>
-        <td>Country</td>
-        <td>XX%</td>
-      </tr>
-    </tbody>
-  </table>
+<br>
+<p>WIP</p>
+
+<section id="period-section">
+  <h2>History</h2>
+  <details class="influence-period">
+    <summary class="period-name">
+
+    </summary>
+    <p class="period-description">
+
+    </p>
+    <table class="influence-shift">
+      <thead>
+        <th colspan="3">Name of Faction</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Country</td>
+          <td>Points shift</td>
+          <td>Percentage shift galactically</td>
+        </tr>
+      </tbody>
+    </table>
+  </details>
 </section>
 
 <p>
